fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -29,7 +29,8 @@
         }
 
         p {
-            color: $desaturated-dark-blue;
+            // color: $desaturated-dark-blue;
+            color: #4D5A6A;
             font-size: .9em;
         }
 
@@ -91,6 +92,7 @@
         p {
             letter-spacing: .25rem;
             font-size: 1em;
+            color: #fff;
         }
 
         .socials {
